Fixed grapical issues on firefox webbrowser

--- a/large-media.css
+++ b/large-media.css
@@ -101,7 +101,7 @@ button#email-signup{
 	font-size: 12px;
 }
 header {
-    width: 100vw;
+    width: 100%;
     height: 6.25rem;
     border-bottom: 1.5px solid black;
     padding: 37px 1.5rem 11px 1.5rem;
@@ -138,7 +138,7 @@ header {
 /* Hidden Menu */
 
 .header-menu {
-	width: 100vw;
+	width: 100%;
 	background-color: var(--background);
 	position: absolute;
 	justify-self: center;
@@ -241,7 +241,7 @@ input#searchInput::placeholder {
 }
 
 .menu-footer {
-	width: 100vw;
+	width: 100%;
 	position: relative; 
 	bottom: 0;
 }
@@ -272,7 +272,8 @@ main{
 .hero-container{
 	width: 100%;
 	height: 38rem;
-    margin-top: 0;
+    margin: 0;
+	padding: 0;
 }
 
 .hero-text{
