--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ button#email-signup{
 	font-size: 12px;
 }
 header {
-    width: 100vw;
+    width: 100%;
     height: 6.25rem;
     border-bottom: 1.5px solid black;
     padding: 37px 1.5rem 11px 1.5rem;
@@ -189,7 +189,7 @@ header {
 }
 .header-menu {
 	height: 88.175vh;
-	width: 100vw;
+	width: 100%;
 	background-color: var(--background);
 	position: absolute;
 	justify-self: center;
@@ -279,7 +279,7 @@ input#searchInput::placeholder {
 }
 
 .menu-footer {
-	width: 100vw;
+	width: 100%;
 	position: absolute; 
 	bottom: 0;
 }
@@ -295,6 +295,7 @@ input#searchInput::placeholder {
 
 #hidden {
 	display: none;
+	left: 0;
 }
 
 
@@ -303,19 +304,20 @@ input#searchInput::placeholder {
 .hero-container, .tech-img-container, .motion-img-container{
     display: flex;
     justify-content: center;
-    margin: 0.5rem;
 	margin-bottom: 2rem;
 	justify-self: center;
 }
 .hero{
 	padding: 1.5rem;
 	padding-bottom: 0;
+	left: 0;
 }
 .hero-container{
 	width: 100%;
 	height: 75vh;
 	border: 1px solid black;
 	position: relative;
+	left: 0;
 }
 .hero-img{
 	width: 100%;
@@ -749,6 +751,9 @@ input#email::placeholder {
 	flex-wrap: wrap;
 	justify-content: left;
 	width: 85vw;
+}
+.plus-icon{
+	width: 1rem;
 }
 
 .footer-footer {
